--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
     "@babel/runtime": "^7.5.5",
     "@material-ui/core": "^4.1.1",
     "@rsksmart/rns-registry": "^1.0.4",
-    "@rsksmart/rsk-contract-metadata": "github:rsksmart/rsk-contract-metadata#master",
-    "@rsksmart/rsk-testnet-contract-metadata": "github:rsksmart/rsk-testnet-contract-metadata#master",
+    "@rsksmart/rsk-contract-metadata": "^1.0.0",
+    "@rsksmart/rsk-testnet-contract-metadata": "^1.0.0",
     "@zxing/library": "^0.8.0",
     "abi-decoder": "^1.2.0",
     "asmcrypto.js": "0.22.0",
@@ -121,7 +121,7 @@
     "eth-keychain-controller": "github:vbaranov/KeyringController#5.3.1",
     "eth-ledger-bridge-keyring": "github:vbaranov/eth-ledger-bridge-keyring#0.1.0-clear-accounts-flag",
     "eth-method-registry": "^1.0.0",
-    "eth-net-props": "^1.0.33",
+    "eth-net-props": "^1.0.35",
     "eth-phishing-detect": "^1.1.4",
     "eth-query": "^2.1.2",
     "eth-sig-util": "^2.5.1",
